--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    implementation "android.arch.work:work-runtime:1.0.1"
+
 }
